# sdl2

./: .gitignore  CMakeLists.txt  LICENSE
src/: .project  CMakeLists.txt  bzip2_dso.cpp  bzip2_dso.hpp  main.c  main.cpp  zlib_dso.cpp  zlib_dso.hpp
src/sdl2_cxx/: CMakeLists.txt  sdl_dso.cpp  sdl_dso.hpp  sdl_error.cpp  sdl_error.hpp  sdl_init.cpp  sdl_init.hpp  sdl_renderer.cpp  sdl_renderer.hpp  sdl_window.cpp  sdl_window.hpp
src/sdl2_image_cxx/: CMakeLists.txt  img_init.cpp  img_init.hpp
