project(sdl2_image_cxx CXX)

set(SDL2_IMAGE_CXX_VERSION_MAJOR 0)
set(SDL2_IMAGE_CXX_VERSION_MINOR 1)
set(SDL2_IMAGE_CXX_VERSION_PATCH 0)
set(SDL2_IMAGE_CXX_VERSION_STR "${SDL2_IMAGE_CXX_VERSION_MAJOR}.${SDL2_IMAGE_CXX_VERSION_MINOR}.${SDL2_IMAGE_CXX_VERSION_PATCH}")
set(SDL2_IMAGE_CXX_SOVERSION ${SDL2_IMAGE_CXX_VERSION_MAJOR})

set(SDL2_IMAGE_CXX_PUBLIC_HEADERS img_init.hpp)
set(SDL2_IMAGE_CXX_SOURCES img_init.cpp)

add_library(sdl2_image_cxx SHARED ${SDL2_IMAGE_CXX_SOURCES})
target_link_libraries(sdl2_image_cxx ${SDL2_REQUIRED_LIBS} sdl2_cxx)
add_dependencies(sdl2_image_cxx sdl2_cxx)
set_target_properties(sdl2_image_cxx PROPERTIES
  SOVERSION ${SDL2_IMAGE_CXX_SOVERSION}
  VERSION ${SDL2_IMAGE_CXX_VERSION_STR}
  PUBLIC_HEADER "${SDL2_IMAGE_CXX_PUBLIC_HEADERS}"
)

install(TARGETS sdl2_image_cxx
  PUBLIC_HEADER DESTINATION include/sdl2_cxx
  LIBRARY DESTINATION lib
)